--- a/hypr/.config/hypr/core/keybinds.conf
+++ b/hypr/.config/hypr/core/keybinds.conf
@@ -20,6 +20,7 @@ bind = $mainMod, P, pseudo,
 bind = $mainMod, J, togglesplit, 
 bind = $mainMod, L, exec, hyprlock
 bind = $mainMod SHIFT, P, pin,
+bind = CTRL ALT, C, centerwindow,
 
 bind = $mainMod, left, movefocus, l
 bind = $mainMod, right, movefocus, r
