feat: separate input/output pulseaudio modules

--- a/hypr/.config/hypr/core/keybinds.conf
+++ b/hypr/.config/hypr/core/keybinds.conf
@@ -19,6 +19,7 @@ bind = $mainMod, V, togglefloating,
 bind = $mainMod, P, pseudo, 
 bind = $mainMod, J, togglesplit, 
 bind = $mainMod, L, exec, hyprlock
+bind = $mainMod, F11, fullscreenstate, 0 2
 bind = $mainMod SHIFT, P, pin,
 bind = CTRL ALT, C, centerwindow,
 
