fix: open pavucontrol when clicking on both pulseaudio modules

--- a/waybar/.config/waybar/config.jsonc
+++ b/waybar/.config/waybar/config.jsonc
@@ -82,6 +82,7 @@
         "format-muted": "{format_source}",
         "format-source": "  {volume}%",
         "format-source-muted": "",
+        "on-click": "uwsm app -- pavucontrol",
         "min-length": 4,
     },
 
