chore: change browser from brave to firefox

--- a/hypr/.config/hypr/core/keybinds.conf
+++ b/hypr/.config/hypr/core/keybinds.conf
@@ -3,7 +3,7 @@
 ################
 
 $terminal = kitty
-$webBrowser = brave
+$webBrowser = firefox 
 $fileBrowser = thunar
 $menu = wofi --show drun --define=drun-print_desktop_file=true
 
