fix: waybar starting on other compositors

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -14,6 +14,9 @@ source = $XDG_CONFIG_HOME/hypr/monitors/*
 ### AUTOSTART ###
 #################
 
+# Start it here so it doesn't take over other desktops
+exec-once = systemctl --user start waybar
+
 # go install github.com/jstncnnr/hyprland-dynamic-windows
 exec-once = uwsm app -- ${GOPATH:-$HOME/go}/bin/hyprland-dynamic-windows
 
