tweak some things

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -1,24 +1,18 @@
-# ██╗  ██╗██╗   ██╗██████╗ ██████╗ ██╗      █████╗ ███╗   ██╗██████╗ 
-# ██║  ██║╚██╗ ██╔╝██╔══██╗██╔══██╗██║     ██╔══██╗████╗  ██║██╔══██╗
-# ███████║ ╚████╔╝ ██████╔╝██████╔╝██║     ███████║██╔██╗ ██║██║  ██║
-# ██╔══██║  ╚██╔╝  ██╔═══╝ ██╔══██╗██║     ██╔══██║██║╚██╗██║██║  ██║
-# ██║  ██║   ██║   ██║     ██║  ██║███████╗██║  ██║██║ ╚████║██████╔╝
-# ╚═╝  ╚═╝   ╚═╝   ╚═╝     ╚═╝  ╚═╝╚══════╝╚═╝  ╚═╝╚═╝  ╚═══╝╚═════╝
-
 source = $XDG_CONFIG_HOME/hypr/core/*
 source = $XDG_CONFIG_HOME/hypr/rules/*
 source = $XDG_CONFIG_HOME/hypr/monitors/*
-
 
 #################
 ### AUTOSTART ###
 #################
 
-# Start it here so it doesn't take over other desktops
+# Start these here so they don't take over other DEs/WMs
+exec-once = systemctl --user start hyprpaper
+exec-once = systemctl --user start hypridle
+exec-once = systemctl --user start hyprpolkitagent
 exec-once = systemctl --user start waybar
-
-# go install github.com/jstncnnr/hyprland-dynamic-windows
-exec-once = uwsm app -- ${GOPATH:-$HOME/go}/bin/hyprland-dynamic-windows
+exec-once = systemctl start swayosd-libinput-backend
+exec-once = swayosd-server
 
 # https://aur.archlinux.org/packages/1password
 exec-once = uwsm app -- 1password --silent
@@ -26,3 +20,5 @@ exec-once = uwsm app -- 1password --silent
 # https://archlinux.org/packages/extra/x86_64/discord
 exec-once = uwsm app -- discord
 
+# go install github.com/jstncnnr/hyprland-dynamic-windows@latest
+exec-once = uwsm app -- ${GOPATH:-$HOME/go}/bin/hyprland-dynamic-windows
