--- a/hypr/.config/hypr/core/keybinds.conf
+++ b/hypr/.config/hypr/core/keybinds.conf
@@ -1,33 +1,30 @@
-################
-### PROGRAMS ###
-################
-
+# Programs
 $terminal = kitty
-$webBrowser = firefox 
-$fileBrowser = thunar
+$webBrowser = brave
+$fileBrowser = nautilus
 $menu = wofi --show drun --define=drun-print_desktop_file=true
 
-################
-### KEYBINDS ###
-################
+# Keybinds
+$mainMod = SUPER
 
-$mainMod = SUPER 
-
-bind = $mainMod, Q, killactive,
+bind = $mainMod, Q, killactive
 bind = $mainMod, M, exec, uwsm stop
+
 bind = $mainMod, V, togglefloating,
-bind = $mainMod, P, pseudo, 
-bind = $mainMod, J, togglesplit, 
-bind = $mainMod, L, exec, hyprlock
-bind = $mainMod, F11, fullscreenstate, 0 2
-bind = $mainMod SHIFT, P, pin,
-bind = CTRL ALT, C, centerwindow,
+bind = $mainMod, P, pseudo,
+bind = $mainMod, left, togglesplit,
+bind = CTRL ALT, C, centerwindow
 
-bind = $mainMod, left, movefocus, l
-bind = $mainMod, right, movefocus, r
-bind = $mainMod, up, movefocus, u
-bind = $mainMod, down, movefocus, d
+# Super + Shift + Q to lock (macOS keybind)
+bind = $mainMod SHIFT, Q, exec, hyprlock
 
+# vim motions to move focus
+bind = $mainMod, H, movefocus, l
+bind = $mainMod, L, movefocus, r
+bind = $mainMod, J, movefocus, d
+bind = $mainMod, K, movefocus, u
+
+# Super + [1-6] to switch workspaces
 bind = $mainMod, 1, workspace, 1
 bind = $mainMod, 2, workspace, 2
 bind = $mainMod, 3, workspace, 3
@@ -35,6 +32,8 @@ bind = $mainMod, 4, workspace, 4
 bind = $mainMod, 5, workspace, 5
 bind = $mainMod, 6, workspace, 6
 
+# Super + Shift + [1-6] to move a window to a workspace,
+# but not switch to it
 bind = $mainMod SHIFT, 1, movetoworkspacesilent, 1
 bind = $mainMod SHIFT, 2, movetoworkspacesilent, 2
 bind = $mainMod SHIFT, 3, movetoworkspacesilent, 3
@@ -42,28 +41,25 @@ bind = $mainMod SHIFT, 4, movetoworkspacesilent, 4
 bind = $mainMod SHIFT, 5, movetoworkspacesilent, 5
 bind = $mainMod SHIFT, 6, movetoworkspacesilent, 6
 
+# Super + (Shift) + S for our special workspace
 bind = $mainMod, S, togglespecialworkspace, magic
 bind = $mainMod SHIFT, S, movetoworkspacesilent, special:magic
-
-bind = $mainMod, mouse_down, workspace, e+1
-bind = $mainMod, mouse_up, workspace, e-1
 
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
 
-bindel = ,XF86AudioRaiseVolume, exec, wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@ 5%+
-bindel = ,XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
-bindel = ,XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
-bindel = ,XF86AudioMicMute, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
+bindel = , XF86AudioRaiseVolume, exec, swayosd-client --output-volume raise --max-volume 100 
+bindel = , XF86AudioLowerVolume, exec, swayosd-client --output-volume lower
+bindel = , XF86AudioMute, exec, swayosd-client --output-volume mute-toggle
+bindel = , XF86AudioMicMute, exec, swayosd-client --input-volume mute-toggle
 
 bindl = , XF86AudioNext, exec, playerctl next
+bindl = , XF86AudioPrev, exec, playerctl previous
 bindl = , XF86AudioPause, exec, playerctl play-pause
 bindl = , XF86AudioPlay, exec, playerctl play-pause
-bindl = , XF86AudioPrev, exec, playerctl previous
 
 bind = $mainMod, Return, exec, uwsm app -- $terminal
 bind = $mainMod, Space, exec, uwsm app -- $($menu)
 bind = $mainMod, E, exec, uwsm app -- $fileBrowser
 bind = $mainMod, B, exec, uwsm app -- $webBrowser
-bind = CTRL SHIFT, Space, exec, uwsm app -- 1password --quick-access
-bind = , PRINT, exec, hyprshot -m region --clipboard-only
+bind = , Print, exec, hyprshot -m region --clipboard-only
